[gd_scene load_steps=14 format=2]

[ext_resource path="res://objects/ui/Panel_Purple.tres" type="StyleBox" id=1]
[ext_resource path="res://objects/ui/SubButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/ui/Panel.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/img/temporal_background.jpg" type="Texture" id=4]
[ext_resource path="res://screens/SelectVideoFilter.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/xandria.png" type="Texture" id=6]
[ext_resource path="res://assets/font/m5x7.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://objects/ui/ButtonKeyGamepadIcon.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/font/alkhemikal.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://assets/sprites/main_menu_button_box.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 90, 47 )
margin_left = 18.9633
margin_right = 18.9107
margin_top = 14.0969
margin_bottom = 14.0

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -7
extra_spacing_bottom = -7
font_data = ExtResource( 9 )

[node name="SelectVideoFilter" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 7

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -274.0
margin_top = -213.0
margin_right = -19.0
margin_bottom = -19.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/separation = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_right = 255.0
margin_bottom = 57.1202
custom_styles/panel = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="VBoxContainer/Panel"]
margin_top = 4.00473
margin_right = 255.0
margin_bottom = 53.0047
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="SubButton" parent="VBoxContainer/Panel/Margin" instance=ExtResource( 2 )]
margin_left = 10.0
margin_top = 10.0
margin_right = 245.0
margin_bottom = 39.0
text = "OPTIONS"

[node name="Panel2" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_top = 71.0
margin_right = 255.0
margin_bottom = 227.12

[node name="Margin" type="MarginContainer" parent="VBoxContainer/Panel2"]
margin_top = 4.00473
margin_right = 255.0
margin_bottom = 152.005
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBx" type="VBoxContainer" parent="VBoxContainer/Panel2/Margin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 245.0
margin_bottom = 138.0

[node name="SubButton" parent="VBoxContainer/Panel2/Margin/VBx" instance=ExtResource( 2 )]
margin_right = 235.0
text = "DISABLED"

[node name="SubButton2" parent="VBoxContainer/Panel2/Margin/VBx" instance=ExtResource( 2 )]
margin_top = 33.0
margin_right = 235.0
margin_bottom = 62.0
text = "Scanlines"

[node name="SubButton3" parent="VBoxContainer/Panel2/Margin/VBx" instance=ExtResource( 2 )]
margin_top = 66.0
margin_right = 235.0
margin_bottom = 95.0
text = "Scanlines (curved)"

[node name="SubButton4" parent="VBoxContainer/Panel2/Margin/VBx" instance=ExtResource( 2 )]
margin_top = 99.0
margin_right = 235.0
margin_bottom = 128.0
text = "Gameboy Classic"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 60, 32 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
vframes = 7
hframes = 16
frame = 1
__meta__ = {
"_editor_description_": "z index : 0"
}

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 132, 32 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
vframes = 7
hframes = 16
frame = 17
__meta__ = {
"_editor_description_": "z index : 0"
}

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 60, 136 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
vframes = 7
hframes = 16
frame = 58
__meta__ = {
"_editor_description_": "z index : 0"
}

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 132, 110 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
vframes = 7
hframes = 16
frame = 74
__meta__ = {
"_editor_description_": "z index : 0"
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 16.0
margin_top = 342.0
margin_right = 232.0
margin_bottom = 371.0
color = Color( 0, 0, 0, 0.482353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
custom_constants/separation = 18
alignment = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/HBoxContainer"]
margin_left = 27.0
margin_right = 115.0
margin_bottom = 29.0
__meta__ = {
"_editor_description_": ""
}

[node name="ButtonKeyGamepadIcon" parent="ColorRect/HBoxContainer/HBoxContainer" instance=ExtResource( 8 )]
margin_top = 6.0
margin_bottom = 22.0
size_flags_vertical = 4
action = "ui_up"

[node name="ButtonKeyGamepadIcon2" parent="ColorRect/HBoxContainer/HBoxContainer" instance=ExtResource( 8 )]
margin_left = 20.0
margin_top = 6.0
margin_right = 36.0
margin_bottom = 22.0
size_flags_vertical = 4
action = "ui_down"

[node name="Label" type="Label" parent="ColorRect/HBoxContainer/HBoxContainer"]
margin_left = 40.0
margin_top = 8.0
margin_right = 88.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
text = "NAVIGATE"
__meta__ = {
"_editor_description_": ""
}

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/HBoxContainer"]
margin_left = 133.0
margin_right = 189.0
margin_bottom = 29.0
__meta__ = {
"_editor_description_": ""
}

[node name="ButtonKeyGamepadIcon" parent="ColorRect/HBoxContainer/HBoxContainer2" instance=ExtResource( 8 )]
margin_top = 6.0
margin_bottom = 22.0
size_flags_vertical = 4
action = "ui_accept"

[node name="Label" type="Label" parent="ColorRect/HBoxContainer/HBoxContainer2"]
margin_left = 20.0
margin_top = 8.0
margin_right = 56.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
text = "SELECT"
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -74.5
margin_top = 7.0
margin_right = 74.5
margin_bottom = 69.0969
grow_horizontal = 2
size_flags_horizontal = 4
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "VIDEO_FILTERS"
align = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
[connection signal="pressed" from="VBoxContainer/Panel/Margin/SubButton" to="." method="_on_SubButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Panel2/Margin/VBx/SubButton" to="." method="change_filter" binds= [ "disabled" ]]
[connection signal="pressed" from="VBoxContainer/Panel2/Margin/VBx/SubButton2" to="." method="change_filter" binds= [ "scanlines" ]]
[connection signal="pressed" from="VBoxContainer/Panel2/Margin/VBx/SubButton3" to="." method="change_filter" binds= [ "scanlines_curved" ]]
[connection signal="pressed" from="VBoxContainer/Panel2/Margin/VBx/SubButton4" to="." method="change_filter" binds= [ "gameboy" ]]
